[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.6.2",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.42.0",
]
