[project]
name = "legislation-worker"
version = "0.1.0"
description = "OpenStates legislation ETL worker using Celery and MongoDB"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.3",
    "pymongo>=4.6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "langchain-huggingface>=0.1",
    "sentence-transformers>=3.0",
    "pgvector>=0.3",
    "psycopg2-binary>=2.9.11",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
